<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceCategory app:title="@string/video_category_prefs">

		<SwitchPreferenceCompat
			app:key="saveMyStreaming" app:title="@string/save_my_streaming_prefs" />

	</PreferenceCategory>

	<PreferenceCategory app:title="@string/panic_category_prefs">

		<SwitchPreferenceCompat
			app:key="PREF_LOCK_AND_EXIT" app:title="@string/lock_and_exit_prefs" />
		<SwitchPreferenceCompat
			app:key="PREF_CLEAR_APP_DATA" app:title="@string/clear_app_data_prefs" />
		<SwitchPreferenceCompat
			app:key="PREF_UNINSTALL_THIS_APP" app:title="@string/unistall_prefs" />

	</PreferenceCategory>
	<PreferenceCategory
		app:title="@string/ip_category_prefs"
		app:key="ip_input_category">
		<EditTextPreference
			app:key="PREF_IP_ADDRESS"
			app:title="@string/ip_addrs_edittextprefs"
			app:summary="@string/ip_addrs_summary"
			app:dialogTitle="@string/ip_addrs_dialog"/>
<!--			app:dialogMessage="Please enter the IP address you want to connect to" />-->
	</PreferenceCategory>

</PreferenceScreen>