<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/description_mode"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/witnessButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/witnessButton"
        android:layout_width="190dp"
        android:layout_height="157dp"
        android:layout_marginTop="25dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:elevation="10dp"
        android:onClick="witnessMode"
        android:src="@drawable/witness_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescription" />

    <ImageButton
        android:id="@+id/humanitarianButton"
        android:layout_width="179dp"
        android:layout_height="161dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:elevation="10dp"
        android:onClick="humanitarianMode"
        android:src="@drawable/humanitarian_image"
        app:layout_constraintBottom_toTopOf="@+id/textHumanitarian"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWitnessDesc" />

    <TextView
        android:id="@+id/textWitness"
        android:layout_width="192dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:text="@string/witness"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textWitnessDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/witnessButton" />

    <TextView
        android:id="@+id/textHumanitarian"
        android:layout_width="177dp"
        android:layout_height="37dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:text="@string/humanitarian"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textHumanitarianDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humanitarianButton" />

    <TextView
        android:id="@+id/textWitnessDesc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/witness_desc"
        app:layout_constraintBottom_toTopOf="@+id/humanitarianButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWitness"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textHumanitarianDesc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:text="@string/humanitarian_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHumanitarian" />

</androidx.constraintlayout.widget.ConstraintLayout>